
package vtrc_example;
option cc_generic_services = true;

